[package]
authors = ["Interlay Ltd"]
description = "Issue module"
edition = "2021"
name = "issue"
version = "1.2.0"

[dependencies]
serde = { version = "1.0.130", default-features = false, features = ['derive'], optional = true }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

# Substrate dependencies
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false, optional = true }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

# Parachain dependencies
bitcoin = { path = "../bitcoin", default-features = false }
btc-relay = { path = "../btc-relay", default-features = false }
oracle = { path = "../oracle", default-features = false }
fee = { path = "../fee", default-features = false }
security = { path = "../security", default-features = false }
currency = { path = "../currency", default-features = false }
vault-registry = { path = "../vault-registry", default-features = false }

primitives = { package = "interbtc-primitives", path = "../../primitives", default-features = false }

# Orml dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ae13a54dbc1a654df0e2d5e9dc18582b62716365", default-features = false, optional = true }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ae13a54dbc1a654df0e2d5e9dc18582b62716365", default-features = false, optional = true }

[dev-dependencies]
mocktopus = "0.7.0"
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# Parachain dependencies
reward = { path = "../reward" }
staking = { path = "../staking" }

# Orml dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ae13a54dbc1a654df0e2d5e9dc18582b62716365" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ae13a54dbc1a654df0e2d5e9dc18582b62716365" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",

	"sp-io/std",
	"sp-core/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-runtime/std",

	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-timestamp/std",

	"bitcoin/std",
	"btc-relay/std",
	"oracle/std",
	"fee/std",
	"security/std",
	"currency/std",
	"vault-registry/std",

    "primitives/std",

	"orml-tokens/std",
	"orml-traits/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",

	"bitcoin/runtime-benchmarks",

	"orml-tokens",
	"orml-traits",
]
try-runtime = [ "frame-support/try-runtime" ]
