[package]
name = "nomination"
version = "0.5.0"
authors = ["Interlay Ltd"]
edition = "2018"

[dependencies]
serde = { version = "1.0.119", default-features = false, features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false, optional = true }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }

# Parachain dependencies
currency = { path = "../currency", default-features = false }
security = { path = "../security", default-features = false }
vault-registry = { path = "../vault-registry", default-features = false }
fee = { path = "../fee", default-features = false }
sla = { path = "../sla", default-features = false }
exchange-rate-oracle = { path = "../exchange-rate-oracle", default-features = false }
reward = { path = "../reward", default-features = false }
staking = { path = "../staking", default-features = false }

[dev-dependencies]
mocktopus = "0.7.0"
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }

# Orml dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "bb6ad7a", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "bb6ad7a", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",

  "sp-runtime/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "sp-io/std",
  "sp-core/std",

  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "pallet-timestamp/std",
  "pallet-randomness-collective-flip/std",

  "currency/std",
  "security/std",
	"vault-registry/std",
  "fee/std",
  "sla/std",
  "reward/std",
  "exchange-rate-oracle/std",
  "staking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
